# cobrapy

./: CMakeLists.txt  setup.py.in
cobra/io/: sbml.py
cobra/test/data/: salmonella_fbc.xml
